--- a/AirfoilOptimizationTool/MainWindow/MainWindow.xaml
+++ b/AirfoilOptimizationTool/MainWindow/MainWindow.xaml
@@ -1,9 +1,10 @@
-﻿<Window x:Class="AirfoilOptimizationTool.MainWindow"
+﻿<Window x:Class="AirfoilOptimizationTool.MainWindow.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AirfoilOptimizationTool"
+        xmlns:behavior="clr-namespace:AirfoilOptimizationTool.MainWindow.Behavior"
         mc:Ignorable="d"
         Title="MainWindow" Height="615" Width="761">
 
@@ -42,103 +43,143 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="0" Grid.Row="1">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding parentCanvasSizes[0].Height, Mode=OneWayToSource}"
+                           behavior:CanvasSizeBehavior.Width="{Binding parentCanvasSizes[0].Width, Mode=OneWayToSource}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="1" Grid.Row="1">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding parentCanvasSizes[1].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding parentCanvasSizes[1].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="2" Grid.Row="1">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding parentCanvasSizes[2].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding parentCanvasSizes[2].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="3" Grid.Row="1">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding parentCanvasSizes[3].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding parentCanvasSizes[3].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="4" Grid.Row="1">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding parentCanvasSizes[4].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding parentCanvasSizes[4].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="5" Grid.Row="1">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding parentCanvasSizes[5].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding parentCanvasSizes[5].Width}">
                         <Polyline  Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
-                    </Canvas> >
+                    </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="6" Grid.Row="1">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding parentCanvasSizes[6].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding parentCanvasSizes[6].Width}">
                         <Polyline  Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="7" Grid.Row="1">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding parentCanvasSizes[7].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding parentCanvasSizes[7].Width}">
                         <Polyline  Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="8" Grid.Row="1">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding parentCanvasSizes[8].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding parentCanvasSizes[8].Width}">
                         <Polyline  Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
-                    </Canvas> >
+                    </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="9" Grid.Row="1">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding parentCanvasSizes[9].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding parentCanvasSizes[9].Width}">
                         <Polyline  Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
 
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="0" Grid.Row="3">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding candidateCanvasSizes[0].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding candidateCanvasSizes[0].Width}">
                         <Polyline  Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="1" Grid.Row="3">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding candidateCanvasSizes[1].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding candidateCanvasSizes[1].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="2" Grid.Row="3">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding candidateCanvasSizes[2].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding candidateCanvasSizes[2].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="3" Grid.Row="3">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding candidateCanvasSizes[3].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding candidateCanvasSizes[3].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="4" Grid.Row="3">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding candidateCanvasSizes[4].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding candidateCanvasSizes[4].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="5" Grid.Row="3">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding candidateCanvasSizes[5].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding candidateCanvasSizes[5].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="6" Grid.Row="3">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding candidateCanvasSizes[6].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding candidateCanvasSizes[6].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="7" Grid.Row="3">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding candidateCanvasSizes[7].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding candidateCanvasSizes[7].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="8" Grid.Row="3">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding candidateCanvasSizes[8].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding candidateCanvasSizes[8].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
                 <Border BorderBrush="Black" BorderThickness="1" Margin="1,1,1,1" Grid.Column="9" Grid.Row="3">
-                    <Canvas>
+                    <Canvas behavior:CanvasSizeBehavior.EnableSize="True"
+                           behavior:CanvasSizeBehavior.Height="{Binding candidateCanvasSizes[9].Height}"
+                           behavior:CanvasSizeBehavior.Width="{Binding candidateCanvasSizes[9].Width}">
                         <Polyline Stroke ="Black"  Points="{Binding Path=PreviewCoordinate5}"/>
                     </Canvas>
                 </Border>
